[tool.poetry]
name = "annex-viewer"
version = "0.1.0"
description = ""
authors = ["David Banks <amoebae@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
Markdown = "^3.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
